# gitops-audit-tool

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 062a37940dd0_add_foreign_keys.py  f2dd9cccc1e4_initial_schema.py
charts/gitops-audit/: Chart.yaml  values.yaml
charts/gitops-audit/templates/: configmap.yaml  deployment-api.yaml  deployment-watcher.yaml  rbac.yaml  secret.yaml  service-api.yaml  serviceaccount.yaml
deploy/: values-example.yaml
deploy/examples/: helm-guestbook.yaml  metrics-demo.yaml  nginx-demo.yaml
src/gitops_audit/analysis/: __init__.py  metrics_analyzer.py
src/gitops_audit/api/: main.py  schemas.py
src/gitops_audit/cli/: main.py
src/gitops_audit/cli/commands/: apps.py  correlate.py  history.py  rollback.py  show.py
src/gitops_audit/config/: logging.py  settings.py
src/gitops_audit/database/: connection.py  models.py  queries.py
src/gitops_audit/integrations/: github.py  prometheus.py  slack.py
src/gitops_audit/watcher/: argocd_watcher.py
terraform/: .terraform.tfstate.lock.info  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: test_database.py  test_suite.py
