[project]
name = "gitops-audit"
version = "0.1.0"
description = "Proactive GitOps deploy auditor"
authors = [
    {name = "KoolinST",email = "LargeEPS@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.11.0,<4.0"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.3.1,<15.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "kubernetes (>=35.0.0,<36.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "greenlet (>=3.3.1,<4.0.0)"
]

[project.scripts]
gitops-audit = "gitops_audit.cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry.scripts]
gitops-audit = "gitops_audit.cli.main:app"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
